# aetherium-qcom

./: .gitignore  CHANGELOG.md  LICENSE  README.md  aetherium_qcom_platform.py  code_signature.sig  compile.bat  compile.sh  compile_aeterium.bat  dev_public.key  hash.txt  install.bat  install.sh  install_aeterium.bat  install_aeterium.sh  pyproject.toml  run.bat  run.sh  run_aeterium.bat  run_aeterium.sh  ‏‏run_aeterium.sh
scripts/: install.bat  install.sh  keygen.bat  run.bat  run.sh  sign.bat
src/aetherium_qcom/: __main__.py
src/aetherium_qcom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/aetherium_qcom/cli/: handlers.py  shell.py
src/aetherium_qcom/core/: code_signature.sig  crypto.py  network.py  profile.json  steganography.py  transport.py  trust.py  utils.py
src/aetherium_qcom/gui/: main_window.py
src/aetherium_qcom/gui/assets/: style.qss
