[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherium-qcom"
version = "0.1.0"
authors = [
  { name="Yaron Koresh", email="aharonkoresh1@gmail.com" },
]
description = "Aetherium Q-Com is a decentralized, untraceable, and unblockable communication platform engineered for truly private, censorship-resistant messaging."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "kademlia~=1.5",
    "cryptography~=44.0",
    "pqcrypto~=0.1.2",
    "numpy~=1.26.4",
    "pillow~=10.5",
    "pydub~=0.25.1",
    "moviepy~=1.0.3",
    "pyside6~=6.7",
    "olefile>=0.47",
    "defusedxml~=0.8.0",
    "pillow-heif~=0.16.0"
]

[project.urls]
"Homepage" = "https://github.com/YaronKoresh/aetherium-qcom"
"Bug Tracker" = "https://github.com/YaronKoresh/aetherium-qcom/issues"