[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherium-qcom"
version = "0.5.0"
authors = [
  { name="Yaron Koresh", email="aharonkoresh1@gmail.com" },
]
description = "Aetherium Q-Com is a decentralized, untraceable, and unblockable communication platform engineered for truly private, censorship-resistant messaging."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "kademlia~=2.2",
    "cryptography~=44.0",
    "pqcrypto~=0.3.4",
    "numpy~=1.26.4",
    "pillow~=10.4.0",
    "pydub~=0.25.1",
    "moviepy~=2.2.1",
    "pyside6~=6.7",
    "olefile>=0.47",
    "defusedxml~=0.7.1",
    "pillow-heif~=0.16.0",
    "pystun3~=1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/YaronKoresh/aetherium-qcom"
"Bug Tracker" = "https://github.com/YaronKoresh/aetherium-qcom/issues"